@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add getEnv function
     Add shakeWithArgs and shakeOptDescrs
     Add newCache to cache the parsed contents of files
     Add newResourceIO and move newResource into the Rules monad
